# cpp-sample-pipeline

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: run_detection.cpp
docs/: destruct-opencv.md  install-clangd.md  install-onnxruntime.md  install-opencv.md  run-opencv.md  structure-project.md  use-yolov8-onnx.md
drafts/: CMakeLists.txt  d1.txt  d2.cpp  d3.sh
include/: Config.h  Loader.h
scripts/: install-onnxruntime.sh  install-opencv.sh  install-yolov8-onnx.sh
src/: Loader.cpp
